--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "ts-node-dev"
+    "dev": "ts-node-dev",
+    "test.compilation": "tsc --noEmit"
   },
   "repository": {
     "type": "git",
