--- a/package.json
+++ b/package.json
@@ -5,20 +5,35 @@
   "main": "index.js",
   "dependencies": {},
   "devDependencies": {
+    "@types/jest": "^29.4.4",
     "@types/node": "^18.11.18",
+    "jest": "^29.5.0",
+    "ts-jest": "^29.0.5",
     "ts-node-dev": "^2.0.0",
-    "typescript": "^4.9.5"
+    "tsup": "^6.6.3",
+    "typescript": "^4.9.5",
+    "vitest": "^0.29.3"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "npm run test.vitest.run",
+    "test.jest": "jest",
+    "test.vitest": "vitest",
+    "test.vitest.run": "vitest run",
     "dev": "ts-node-dev",
-    "test.compilation": "tsc --noEmit"
+    "test.compilation": "tsc --noEmit",
+    "build": "tsup src --format cjs,esm --dts"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/slavahatnuke/strict-stream.git"
   },
-  "keywords": ["stream", "strict", "strict-stream", "strictly-typed-stream", "typed-stream"],
+  "keywords": [
+    "stream",
+    "strict",
+    "strict-stream",
+    "strictly-typed-stream",
+    "typed-stream"
+  ],
   "author": "slava hatnuke",
   "license": "ISC",
   "bugs": {
