--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,7 +13,9 @@ jobs:
 
     strategy:
       matrix:
-        node-version: [16.x, 18.x]
+        node-version:
+#          - 16.x
+          - 18.x
 
     steps:
       - uses: actions/checkout@v3
@@ -21,6 +23,6 @@ jobs:
         uses: actions/setup-node@v3
         with:
           node-version: ${{ matrix.node-version }}
-#      - run: npm ci
+      - run: npm install
       - run: npm run build --if-present
       - run: npm test
