--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "strict-stream",
-  "version": "0.0.5",
+  "version": "0.0.6",
   "description": "strict-stream - strictly / strongly typed stream",
   "main": "./index.js",
   "module": "./index.mjs",
@@ -8,10 +8,7 @@
   "dependencies": {},
   "devDependencies": {
     "@changesets/cli": "^2.26.0",
-    "@types/jest": "^29.4.4",
     "@types/node": "^18.11.18",
-    "jest": "^29.5.0",
-    "ts-jest": "^29.0.5",
     "ts-node-dev": "^2.0.0",
     "tsup": "^6.6.3",
     "typescript": "^4.9.5",
@@ -19,15 +16,14 @@
   },
   "scripts": {
     "test": "npm run test.vitest.run",
+    "dev": "npm run test.vitest",
     "ci": "npm run test.compilation && npm run test && npm run build && cp -r dist/* . && rm -rf ./dist",
     "ci.clean": "git clean -f",
     "release.start": "changeset",
     "release.complete": "changeset version",
     "release": "npm run ci && changeset publish",
-    "test.jest": "jest",
     "test.vitest": "vitest",
     "test.vitest.run": "vitest run",
-    "dev": "ts-node-dev",
     "test.compilation": "tsc --noEmit",
     "build": "tsup src --format cjs,esm --dts"
   },
