--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -13,6 +13,6 @@ jobs:
           node-version: '18.x'
           registry-url: 'https://registry.npmjs.org'
       - run: yarn
-      - run: yarn release
+      - run: yarn release.deploy
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
