--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "test": "npm run test.vitest.run",
     "dev": "npm run test.vitest",
     "ci": "npm run test.compilation && npm run test && npm run build && cp -r dist/* . && rm -rf ./dist",
-    "ci.clean": "git clean -f",
+    "ci.clean": "git clean -f -d",
     "release.start": "changeset",
     "release.finish": "changeset version",
     "release.deploy": "npm run ci && changeset publish",
