--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "release.start": "changeset",
     "release.finish": "changeset version",
     "release.deploy": "npm run ci && changeset publish",
-    "test.vitest": "vitest --config src/vitest.config.ts",
+    "test.watch": "vitest --config src/vitest.config.ts",
     "test.post-release": "npm install strict-stream --no-save && vitest --config src/vitest.post-release.config.ts run",
     "test.vitest.run": "vitest --config src/vitest.config.ts run",
     "test.compilation": "tsc --noEmit",
