--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "strict-stream",
-  "version": "1.0.6",
+  "version": "1.0.7",
   "description": "strict-stream - strictly / strongly typed stream",
   "main": "./index.js",
   "module": "./index.mjs",
@@ -24,6 +24,7 @@
     "ci.clean": "git clean -f -d",
     "release.start": "changeset",
     "release.finish": "changeset version",
+    "release.up": "npm run release.start && npm run release.finish",
     "release.deploy": "npm run ci && (cp -r dist/* . && rm -rf ./dist) && changeset publish",
     "test.watch": "vitest --config src/vitest.config.ts",
     "test.post-release": "npm install strict-stream --no-save && vitest --config src/vitest.post-release.config.ts run",
