--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "release.up": "npm run release.start && npm run release.finish",
     "release.deploy": "npm run ci && (cp -r dist/* . && rm -rf ./dist) && changeset publish",
     "test.watch": "vitest --config src/vitest.config.ts",
-    "test.post-release": "npm install strict-stream --no-save && vitest --config src/vitest.post-release.config.ts run",
+    "test.cd": "npm run test.release",
+    "test.release": "npm install strict-stream --no-save && vitest --config src/vitest.cd.config.ts run",
     "test.vitest.run": "vitest --config src/vitest.config.ts run",
     "test.compilation": "tsc --noEmit",
     "test.deps": "npx madge --circular --ts-config tsconfig.json --extensions ts src",
