--- a/package.json
+++ b/package.json
@@ -35,8 +35,8 @@
     "build.v2": "tsup src --format cjs,esm --dts",
     "build.v1": "tsc --outDir dist --module commonjs --declaration true",
     "build": "npm run build.v2 && npm run build.v1",
-    "lint": "eslint src/**/*.ts --fix",
-    "lint.only": "eslint src/**/*.ts"
+    "lint": "eslint src --fix",
+    "lint.only": "eslint src"
   },
   "repository": {
     "type": "git",
