--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "release.start": "changeset",
     "release.finish": "changeset version",
     "release.up": "npm run release.start && npm run release.finish",
-    "release.deploy": "npm run ci && (cp -r dist/* . && rm -rf ./dist) && changeset publish",
+    "release.deploy": "npm run ci && (cp -r dist/* . && rm -rf ./dist && rm -rf ./readme) && changeset publish",
     "test.watch": "vitest --config src/vitest.config.ts",
     "test.cd": "npm run test.release",
     "test.release": "npm install strict-stream --no-save && vitest --config src/vitest.cd.config.ts run",
