--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
   "scripts": {
     "test": "npm run test.vitest.run",
     "dev": "npm run test.vitest",
-    "ci": "npm run test.compilation && npm run test.deps && npm run lint.only && npm run test && npm run build",
+    "ci": "npm run test.ci && npm run build",
     "ci.clean": "git clean -f -d",
     "release.start": "changeset",
     "release.finish": "changeset version",
@@ -35,6 +35,7 @@
     "test.vitest.run": "vitest --config src/vitest.config.ts run",
     "test.compilation": "tsc --noEmit",
     "test.deps": "npx madge --circular --ts-config tsconfig.json --extensions ts src",
+    "test.ci": "npm run test.compilation && npm run test.deps && npm run lint.only && npm run test",
     "build.v2": "tsup src --format cjs,esm --dts",
     "build.v1": "tsc --outDir dist --module commonjs --declaration true",
     "build": "npm run build.v2 && npm run build.v1",
